--- a/.github/workflows/Snake.yml
+++ b/.github/workflows/Snake.yml
@@ -40,3 +40,9 @@ jobs:
           publish_branch: output
           # Optionally, you can set a custom commit message
           commit_message: "Update snake animation [skip ci]"
+
+     <picture>
+       <source media="(prefers-color-scheme: dark)" srcset="https://raw.githubusercontent.com/himanshukaswa7/himanshukaswa7/output/github-snake-dark.svg" />
+       <source media="(prefers-color-scheme: light)" srcset="https://raw.githubusercontent.com/himanshukaswa7/himanshukaswa7/output/github-snake.svg" />
+       <img alt="github-snake" src="https://raw.githubusercontent.com/himanshukaswa7/himanshukaswa7/output/github-snake.svg" />
+     </picture>
